--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <title>SKY HABITAT By Urbanrise - Miyapur</title>
     <meta name="title" content="SKY HABITAT By Urbanrise - Miyapur" />
     <meta name="description" content="Book your dream 2, 2.5 & 3 BHK flat at Sky Habitat by Urbanrise in Miyapur, Hyderabad. Premium gated community with modern amenities. Enquire now!" />
-    <meta name="keywords" content="Sky Habitat, Urbanrise Miyapur, Apartments in Miyapur, Urbanrise Hyderabad, Gated Community Miyapur, 2BHK, 3BHK Flats, Hyderabad Real Estate" />
+    <meta name="keywords" content="Sky Habitat, urbanrise, joy of hyderabad, Urbanrise Miyapur, Apartments in Miyapur, Urbanrise Hyderabad, Gated Community Miyapur, 2BHK, 3BHK Flats, Hyderabad Real Estate" />
     <meta name="author" content="Urbanrise" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://skyhabitat.property-details.in/" />
