--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="https://skyhabitat.property-details.in/" />
     
     <link href="/path/to/tailwind.css" rel="stylesheet">
-    
+    <meta name="google-site-verification" content="ugzYfelrsdzx8oSr3MgkJnmoDnaCcrL48AxrdMi-6TI" />
   </head>
   <body>
     <div id="root"></div>
